--- a/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.css
+++ b/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.css
@@ -150,7 +150,7 @@ div#search-buttons {
     padding-top: 18px;
 }
 
-.gowno {
+input[type="submit"] {
     height: 36px;
     line-height: 27px;
     background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
