--- a/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.css
+++ b/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.css
@@ -173,6 +173,32 @@ input[type="submit"]:hover {
     color: rgba(0,0,0,.88);
 }
 
+.mdc-button-gretszel {
+    height: 36px;
+    line-height: 27px;
+    background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368 !important;
+    cursor: pointer;
+    font-family: Arial, sans-serif !important;
+    font-size: 14px !important;
+    font-weight: normal;
+    margin: 11px 4px;
+    min-width: 54px;
+    padding: 0 16px;
+    text-align: center;
+    text-transform: none !important;
+    letter-spacing: 0px!important;
+    width: 130px;
+}
+
+.mdc-button-gretszel:hover {
+    border: 1px solid lightgray;
+    color: rgba(0,0,0,.88) !important;
+}
+
 i {
     color: rgba(0,0,0,.54);
 }
