--- a/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.css
+++ b/Zadanie_1_Piotr_Gretszel/Google_start_page_imitation.css
@@ -229,6 +229,31 @@ i:hover {
     padding-top: 5px;
 }
 
-.fa-th{
+.fa-th {
     font-size: 150%;
+}
+
+.autocomplete {
+    position: relative;
+    width: 230px;
+}
+
+.autocomplete-results {
+    padding: 0;
+    margin: 0;
+    border: 1px solid #eeeeee;
+    height: 120px;
+    overflow: auto;
+}
+
+.autocomplete-result {
+    list-style: none;
+    text-align: left;
+    padding: 4px 2px;
+    cursor: pointer;
+}
+
+.autocomplete-result:hover {
+    background-color: rgba(0, 0, 0, 0.54);
+    color: white;
 }
