--- a/Google_page_imitation_Piotr_Gretszel/shared.css
+++ b/Google_page_imitation_Piotr_Gretszel/shared.css
@@ -36,10 +36,6 @@ body {
     height: 70%;
 }
 
-#top-menu ul.nav-bar li:first-of-type a { /*FOR EDGE*/
-    color: rgba(0, 0, 0, 0.87) !important;
-}
-
 footer {
     background: #f2f2f2;
     flex-shrink: 0;
@@ -58,7 +54,6 @@ footer {
     font-family: Arial, sans-serif;
     border-bottom: 1px solid #e4e4e4;
     border-top: 1px solid #e4e4e4;
-    padding-left: 30px;
 }
 
 .footer-bottom-text {
@@ -75,18 +70,18 @@ footer {
     margin-right: 30px;
 }
 
-#footer-bottom ul {
-    display: flex;
-    flex-direction: row;
-}
+    #footer-bottom ul {
+        display: flex;
+        flex-direction: row;
+    }
 
-#footer-bottom li {
-    padding-left: 27px;
-}
+    #footer-bottom .links {
+        color: #5f6368;
+    }
 
-#footer-bottom .links { /*FOR EDGE*/
-    color: #5f6368;
-}
+        #footer-bottom .links:hover {
+            color: #5f6368;
+        }
 
 .text-black {
     color: #5f6368;
@@ -106,31 +101,31 @@ footer {
 }
 
 #input-text {
-     border-radius: 24px;
-     border: 1px solid #dfe1e5;
-     height: 44px;
-     margin: 0 auto;
-     font-size: small;
-     display: flex;
-     align-items: center;
- }
-
-#input-text a {
-    padding-left: 17px;
-    height: 100%;
+    border-radius: 24px;
+    border: 1px solid #dfe1e5;
+    height: 44px;
+    margin: 0 auto;
+    font-size: small;
     display: flex;
     align-items: center;
-    text-decoration: none;
 }
 
-#input-text a i:hover {
-    color: rgba(0,0,0,.54);
-    text-decoration: none;
-}
+    #input-text a {
+        padding-left: 17px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+    }
 
-#input-text a:last-of-type {
-    margin-right: 17px;
-}
+        #input-text a i:hover {
+            color: rgba(0,0,0,.54);
+            text-decoration: none;
+        }
+
+        #input-text a:last-of-type {
+            margin-right: 17px;
+        }
 
 #search {
     word-wrap: break-word;
@@ -162,10 +157,10 @@ input[type="submit"] {
     text-align: center;
 }
 
-input[type="submit"]:hover {
-    border: 1px solid lightgray;
-    color: rgba(0,0,0,.88);
-}
+    input[type="submit"]:hover {
+        border: 1px solid lightgray;
+        color: rgba(0,0,0,.88);
+    }
 
 .border-outline {
     box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
@@ -174,6 +169,11 @@ input[type="submit"]:hover {
 .links {
     text-decoration: none;
 }
+
+    .links:hover {
+        cursor: pointer;
+        color: rgba(0, 0, 0, .54);
+    }
 
 .autocomplete {
     position: relative;
@@ -199,8 +199,17 @@ input[type="submit"]:hover {
     cursor: pointer;
 }
 
-.autocomplete-result.is-active,
-.autocomplete-result:hover {
-    background-color: rgba(0, 0, 0, 0.33);
-    color: white;
+    .autocomplete-result.is-active,
+    .autocomplete-result:hover {
+        background-color: rgba(0, 0, 0, 0.33);
+        color: white;
+    }
+
+.linkToBeDeveloped {
+}
+
+.fas {
+}
+
+.fa-circle {
 }
