--- a/Google_page_imitation_Piotr_Gretszel/Google_start_page_imitation.css
+++ b/Google_page_imitation_Piotr_Gretszel/Google_start_page_imitation.css
@@ -6,67 +6,6 @@
     margin-top: 3px;
 }
 
-#main-container {
-    padding-top: 8%;
-}
-
-#google-logo {
-    margin-bottom: 25px;
-}
-
-#search-buttons {
-    padding-top: 18px;
-}
-
-#footer-top {
-    padding-left: 30px;
-}
-
-#footer-bottom {
-    margin-left: 3px;
-}
-
-    #footer-bottom li {
-        padding-left: 27px;
-    }
-
-#input-text {
-    width: 584px;
-}
-
-#search {
-    width: 480px;
-}
-
-.mdc-button-gretszel {
-    height: 36px;
-    line-height: 27px;
-    background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
-    background-color: #f2f2f2;
-    border: 1px solid #f2f2f2;
-    border-radius: 4px;
-    color: #5F6368 !important;
-    cursor: pointer;
-    font-family: Arial, sans-serif !important;
-    font-size: 14px !important;
-    font-weight: normal;
-    margin: 11px 4px;
-    min-width: 54px;
-    text-align: center;
-    text-transform: none !important;
-    letter-spacing: 0 !important;
-    width: 130px;
-}
-
-    .mdc-button-gretszel:hover {
-        border: 1px solid lightgray;
-        color: rgba(0,0,0,.88) !important;
-    }
-
-.fa-th {
-    font-size: 150%;
-}
-
 .links {
     color: rgba(0, 0, 0, .87);
 }
@@ -90,3 +29,46 @@ i {
     .nav-bar li:first-of-type {
         padding-left: 0;
     }
+
+#main-container {
+    padding-top: 8%;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+#google-logo {
+    margin-bottom: 25px;
+}
+
+#input-text {
+    width: 584px;
+}
+
+#search {
+    width: 480px;
+}
+
+.autocomplete-results {
+    margin: 45px 0 0 -37px;
+    width: 475px;
+}
+
+#search-buttons {
+    padding-top: 18px;
+}
+
+#footer-top {
+    padding-left: 30px;
+}
+
+#footer-bottom {
+    margin-left: 3px;
+}
+
+    #footer-bottom li {
+        padding-left: 27px;
+    }
+
+.fa-th {
+    font-size: 150%;
+}
