--- a/Google_page_imitation_Piotr_Gretszel/shared.css
+++ b/Google_page_imitation_Piotr_Gretszel/shared.css
@@ -7,19 +7,34 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-family: Arial, sans-serif;
+    color: #777;
 }
 
 #top-menu {
     text-decoration: none;
     outline: none;
     font-size: 13px;
-    font-family: Arial, sans-serif;
     margin-right: 3px;
+}
+
+.links {
+    text-decoration: none;
+}
+
+    .links:hover {
+        cursor: pointer;
+        color: rgba(0, 0, 0, .54);
+    }
+
+#my-face {
+    width: 70%;
+    height: 70%;
 }
 
 .nav-bar li {
@@ -31,72 +46,9 @@ body {
     padding-top: 5px;
 }
 
-#my-face {
-    width: 70%;
-    height: 70%;
-}
-
-footer {
-    background: #f2f2f2;
-    flex-shrink: 0;
-}
-
-#footer-top {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    height: 40px;
-    color: rgba(0,0,0,.54);
-    font-size: 15px;
-    text-align: left;
-    line-height: 40px;
-    font-family: Arial, sans-serif;
-    border-bottom: 1px solid #e4e4e4;
-    border-top: 1px solid #e4e4e4;
-}
-
-.footer-bottom-text {
-    color: #5f6368;
-    font-family: Arial, sans-serif;
-    line-height: 40px;
-    font-size: small;
-}
-
-#footer-bottom {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-right: 30px;
-}
-
-    #footer-bottom ul {
-        display: flex;
-        flex-direction: row;
-    }
-
-    #footer-bottom .links {
-        color: #5f6368;
-    }
-
-        #footer-bottom .links:hover {
-            color: #5f6368;
-        }
-
-.text-black {
-    color: #5f6368;
-}
-
-.text-bold {
-    color: #333;
-    font-weight: bold;
-}
-
 #main-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
     flex: 1 0 auto;
 }
 
@@ -139,6 +91,36 @@ footer {
     margin-left: 17px;
 }
 
+.autocomplete {
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: rgba(0, 0, 0, .87);
+}
+
+.autocomplete-results {
+    position: absolute;
+    background-color: white;
+    z-index: 9999;
+    padding: 0;
+    border: 1px solid #eeeeee;
+    height: 120px;
+    overflow: auto;
+}
+
+.autocomplete-result {
+    list-style: none;
+    text-align: left;
+    padding: 4px 2px;
+    cursor: pointer;
+}
+
+    .autocomplete-result.is-active,
+    .autocomplete-result:hover {
+        background-color: rgba(0, 0, 0, 0.33);
+    }
+
 input[type="submit"] {
     height: 36px;
     line-height: 27px;
@@ -148,7 +130,6 @@ input[type="submit"] {
     border-radius: 4px;
     color: #5F6368;
     cursor: pointer;
-    font-family: Arial, sans-serif;
     font-size: 14px;
     font-weight: normal;
     margin: 11px 4px;
@@ -162,54 +143,85 @@ input[type="submit"] {
         color: rgba(0,0,0,.88);
     }
 
+.mdc-button-gretszel {
+    height: 36px;
+    line-height: 27px;
+    background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368 !important;
+    cursor: pointer;
+    font-family: Arial, sans-serif !important;
+    font-size: 14px !important;
+    font-weight: normal;
+    margin: 11px 4px;
+    min-width: 54px;
+    text-align: center;
+    text-transform: none !important;
+    letter-spacing: 0 !important;
+    width: 130px;
+}
+
+    .mdc-button-gretszel:hover {
+        border: 1px solid lightgray;
+        color: rgba(0,0,0,.88) !important;
+    }
+
+footer {
+    background: #f2f2f2;
+    flex-shrink: 0;
+}
+
+#footer-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    height: 40px;
+    color: rgba(0,0,0,.54);
+    font-size: 15px;
+    text-align: left;
+    line-height: 40px;
+    border-bottom: 1px solid #e4e4e4;
+    border-top: 1px solid #e4e4e4;
+}
+
+.footer-bottom-text {
+    color: #5f6368;
+    line-height: 40px;
+    font-size: small;
+}
+
+#footer-bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-right: 30px;
+}
+
+    #footer-bottom ul {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #footer-bottom .links {
+        color: #5f6368;
+    }
+
+        #footer-bottom .links:hover {
+            color: #5f6368;
+        }
+
+.text-black {
+    color: #5f6368;
+}
+
+.text-bold {
+    color: #333;
+    font-weight: bold;
+}
+
 .border-outline {
     box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
-}
-
-.links {
-    text-decoration: none;
-}
-
-    .links:hover {
-        cursor: pointer;
-        color: rgba(0, 0, 0, .54);
-    }
-
-.autocomplete {
-    position: relative;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.autocomplete-results {
-    padding: 0;
-    margin: 18px 0 0 0;
-    border: 1px solid #eeeeee;
-    width: 330px;
-    height: 120px;
-    overflow: auto;
-    font-family: Arial, sans-serif;
-}
-
-.autocomplete-result {
-    list-style: none;
-    text-align: left;
-    padding: 4px 2px;
-    cursor: pointer;
-}
-
-    .autocomplete-result.is-active,
-    .autocomplete-result:hover {
-        background-color: rgba(0, 0, 0, 0.33);
-        color: white;
-    }
-
-.linkToBeDeveloped {
-}
-
-.fas {
-}
-
-.fa-circle {
 }
