--- a/Google_page_imitation_Piotr_Gretszel/Google_results_page.css
+++ b/Google_page_imitation_Piotr_Gretszel/Google_results_page.css
@@ -1,4 +1,20 @@
-﻿#sticky {
+﻿#bodyContainer {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+    color: #777;
+}
+
+#routerApp {
+    flex: 1 0 auto;
+}
+
+#sticky {
     height: 66px;
     display: flex;
     flex-direction: row;
@@ -51,6 +67,21 @@ i {
         text-decoration: none;
         color: rgba(0, 0, 0, 0.87) !important;
     }
+
+a {
+    color: #5f6368;
+    text-decoration: none;
+}
+
+li.category-active span a {
+    color: #1A73E8;
+}
+
+a:hover {
+    cursor: pointer;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.87) !important;
+}
 
 #sticky-end {
     display: flex;
